# aiops-anomaly-zero-to-hero

./: .dockerignore  .gitignore  COURSE_GUIDE.md  Dockerfile  LICENSE  README.md  compose.yaml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: validate.yml
course_materials/: 01_網路介面監控_欄位說明.md  02_網路介面監控_單一欄位異常.md  03_網路介面監控_多欄位交互作用.md  04_網路介面監控_RCA根本原因分析流程.md  05_網路介面監控_實作教學設計.md
curriculum/: README.md
data/: README.md
data/processed/: README.md  raw_alerts.csv  rca_events.csv  reduced_alerts.csv
data/sample/: README.md
data/synthetic/: README.md  simulator_rrd_metrics.ipynb  synthetic_event_catalog.csv
docs/: reference-analysis.md
environments/: README.md  environment.linux.yml  environment.macos.yml  environment.week6.yml  environment.windows.yml
grafana/dashboards/: network_metrics.json
hands-on/aiops-anomaly-detection/: README.md  environment.yml
infra/: csv_exporter.py  exporter.py  python_results_exporter.py  rrd_exporter.py
infra/prometheus/: alerts.yml  forecast_alerts.yml  prometheus.linux.yml  prometheus.macos.yml  prometheus.windows.yml  (+1 more)
labs/: README.md
notebooks/: Notebook1_Time_Series_Features.ipynb  Notebook2_Baseline_Anomaly_Detection.ipynb  Notebook3_SPC_for_AD.ipynb  Notebook4_ML_Unsupervised_for_AD.ipynb  Notebook5_AD_Alert_Reduction.ipynb  Notebook6_Forecasting.ipynb  Notebook7_Root_Cause_Analysis_with_LLM.ipynb
prometheus/: prometheus.yml
reports/: rca_report.md
scripts/: build_teaching_notebooks.py  generate_project.py
tests/: test_anomaly.py  test_exporter.py  test_simulator.py
(+72 files in other folders)
