[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiops-anomaly-zero-to-hero"
version = "0.1.0"
description = "AIOps pipeline: synthetic RRD data simulation, anomaly detection, and Prometheus/Grafana export"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["aiops", "anomaly-detection", "prometheus", "grafana", "network-monitoring"]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "prometheus_client>=0.20",
]

[project.optional-dependencies]
course = [
    "matplotlib>=3.9",
    "jupyterlab>=4.3",
    "ipykernel>=6.29",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
aiops-export   = "aiops_monitor.exporter.metrics_exporter:main"
aiops-simulate = "aiops_monitor.simulator.rrd:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
